# dynamic_parameter-identification-matlab

./: M_mtrx_fcn.m  README.md  baseQR_7dof.mat  compute_tau_dyn.m  estimate_drive_gains.m  estimate_dynamic_params.m  experiment_design.m  export_dynamic_params_cpp.m  gen_torque_expression.m  main.m  standard_regressor_marvin.m
Dyn_XY/01_GenRegressionMatrix/: GenRegLagrangian.m  GenRegNewtonEuler.m  RobotFk.m  run.m
Dyn_XY/02_GenBaseParameters/: GenBaseParameters.m  TestBaseParams.m  run.m
Dyn_XY/03_ExcitationTrajectory/: getPolCoeffs.m  (+5 more)
autogen/: F_vctr_fcn.m  G_vctr_fcn.m  standard_regressor_marvin.m  standard_regressor_marvin_LR.m  standard_regressor_marvin_NE.m
cpp_ne/: CMakeLists.txt  README.md
cpp_ne/include/: base_qr_E1.h  compute_tau_dyn.h  compute_torque.h  dynamic_params.h  friction_regressor.h  robot_dyn_config.h  standard_regressor_marvin.h
cpp_ne/src/: compute_tau_dyn.cpp  compute_torque.cpp  friction_regressor.cpp  standard_regressor_marvin.cpp
dynamics/: GenRegNewtonEulerGravity.m  base_params_qr.m  generate_friction_eq.m  generate_load_regressor.m  generate_rb_dynamics.m  generate_rb_regressor.m  regressorWithMotorDynamics.m  run.m
results/: sol.mat  sol_torque.mat
scripts/: convert_regressor_to_cpp.py  convert_regressor_to_cpp_yg.py  convert_tau_dyn_to_cpp.py  export_baseqr_cpp.py  export_baseqr_cpp_yg.py
tests/: test_base_params.m  test_rb_inverse_dynamics.m
trajectory_optmzn/: baseQR_7dof.mat  fourier_series_traj.m  getPolCoeffs.m  mixed_traj.m  traj_cnstr.m  traj_cnstr_fsblty.m  traj_cost_lgr.m  writeTrajectoryCoefficientsIntoFile.m
(+39 files in other folders)
